--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.parallel = true
 
 # Mod Properties
 version = 0.5.0
-maven_group = com.example
-archives_base_name = example_mod
+maven_group = com.raggle
+archives_base_name = faesied
 
 # Dependencies are managed at gradle/libs.versions.toml
 cardinal_components_version = 5.0.2
