--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,11 @@ repositories {
             includeGroup "maven.modrinth"
         }
     }
+    maven {url = 'https://maven.blamejared.com/' }
+    maven {url = "https://mvn.devos.one/releases/" }
+    maven {url = "https://maven.theillusivec4.top/"}
+    maven {url = "https://maven.jamieswhiteshirt.com/libs-release"}
+    maven {url = "https://maven.terraformersmc.com/"}
 }
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
@@ -54,6 +59,15 @@ dependencies {
     include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_version}"
     
     modCompileOnly "maven.modrinth:sodium:mc${project.sodium_minecraft_version}-${project.sodium_version}"
+
+	//Lodestar Dependencies
+    modImplementation("team.lodestar.lodestone:lodestone:${project.minecraft_version}-${project.lodestone_version}-fabric")
+
+    modImplementation("dev.emi:trinkets:${project.trinkets_version}")
+    for (String module in port_lib_modules.split(",")) {
+        modImplementation("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version")
+    }
+    modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
 }
 
 processResources {
