--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,28 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 0.5.0
+version = 0.6.0
 maven_group = com.raggle
 archives_base_name = faesied
 
 # Dependencies are managed at gradle/libs.versions.toml
-cardinal_components_version = 5.0.2
-sodium_version=0.4.4
-sodium_minecraft_version=1.19.2
+cardinal_components_version = 5.2.3
+sodium_version=0.5.3
+sodium_minecraft_version=1.20.1
+minecraft_version=1.20.1
+lodestone_version=1.6.2.3g
+trinkets_version=3.7.2
+rea_version=2.4.0
+port_lib_version = 2.3.4+1.20.1
+port_lib_modules = \
+  accessors,\
+  base,\
+  blocks,\
+  core,\
+  data,\
+  extensions,\
+  lazy_registration,\
+  model_generators,\
+  models,\
+  networking,\
+  tool_actions
