--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,14 @@ repositories {
             includeGroup "maven.modrinth"
         }
     }
-    maven {url = 'https://maven.blamejared.com/' }
-    maven {url = "https://mvn.devos.one/releases/" }
-    maven {url = "https://maven.theillusivec4.top/"}
-    maven {url = "https://maven.jamieswhiteshirt.com/libs-release"}
-    maven {url = "https://maven.terraformersmc.com/"}
+    maven {
+        name = 'BlameJared Maven (CrT / Bookshelf)'
+        url = 'https://maven.blamejared.com'
+    }
+	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/"
+	}
 }
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
@@ -49,25 +52,32 @@ dependencies {
 	// Quilted Fabric API will automatically pull in the correct QSL version.
 	//modImplementation libs.quilted.fabric.api
 	modImplementation libs.bundles.quilted.fabric.api // If you wish to use Fabric API's deprecated modules, you can replace the above line with this one
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cardinal_components_version}"
-    // Adds a dependency on a specific module
-    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:${project.cardinal_components_version}"
-    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_version}"
+
+	modImplementation(libs.cardinal.components.base) {
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+	}
+	// Adds a dependency on a specific module
+	modImplementation(libs.cardinal.components.entity) {
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+	}
+	modImplementation(libs.cardinal.components.chunk) {
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+	}
     // Includes Cardinal Components API as a Jar-in-Jar dependency (optional)
-    include "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cardinal_components_version}"
-    include "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:${project.cardinal_components_version}"
-    include "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_version}"
+    include(libs.cardinal.components.base)
+    include(libs.cardinal.components.entity)
+    include(libs.cardinal.components.chunk)
+
+    modCompileOnly (libs.sodium)
     
-    modCompileOnly "maven.modrinth:sodium:mc${project.sodium_minecraft_version}-${project.sodium_version}"
-
-	//Lodestar Dependencies
-    modImplementation("team.lodestar.lodestone:lodestone:${project.minecraft_version}-${project.lodestone_version}-fabric")
-
-    modImplementation("dev.emi:trinkets:${project.trinkets_version}")
-    for (String module in port_lib_modules.split(",")) {
-        modImplementation("io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version")
+    modImplementation(libs.trinkets)
+    
+    modImplementation(libs.veil) {
+        exclude group: "maven.modrinth"
     }
-    modImplementation("com.jamieswhiteshirt:reach-entity-attributes:${project.rea_version}")
 }
 
 processResources {
