--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,20 @@
 org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.16.14
+loom_version=1.11-SNAPSHOT
+
 # Mod Properties
-version = 0.7.1
+mod_version = 0.7.2
 maven_group = com.raggle
 archives_base_name = half_dream
 
-# Dependencies are managed at gradle/libs.versions.toml
+# Dependencies
+fabric_version=0.92.6+1.20.1
+sodium_version=mc1.20.1-0.5.3-fabric
+cca_version=5.2.3
+# trinkets_version= 3.7.2
